heading line spacings fixed
heading line spacings fixed

--- a/index.css
+++ b/index.css
@@ -19,6 +19,10 @@ p{
 a{
   text-decoration: none;
 }
+h1{
+  margin: 1.5rem 0;
+  line-height: 1;
+}
 
 .header{
     height: 88px;
@@ -93,6 +97,7 @@ a{
 }
 .text-1{
   font-size: 46px;
+  margin: 2rem 0;
 
 }
 .button{
